@@ -1,5 +1,8 @@
 Version 2.01.11 - 
 ==============================
+  lv_reduce tidying.
+  Remove some unnecessary parameters.
+  Introduce seg_is macros.
 
 Version 2.01.10 - 3rd May 2005
 ==============================
